# CS-354N

Lab-5/ques_1/: input.txt  main  main.cpp  output_results_lr_0.0001.txt  output_results_lr_0.005.txt  output_results_lr_0.010.txt  output_results_lr_0.050.txt  output_results_lr_0.100.txt  readme.md
Lab-5/ques_2/: README.md  main  main.cpp  rabbit_bear_input.txt  rabbit_bear_results.txt
Lab-6/Ques1/: CMakeLists.txt  diabetes_test.csv  diabetes_train.csv
Lab-6/Ques1/include/: Layer.h  NeuralNetwork.h
Lab-6/Ques1/src/: Layer.cpp  NeuralNetwork.cpp  main.cpp
Lab-6/Ques2/: CMakeLists.txt  iris_test.csv  iris_train.csv
Lab-6/Ques2/include/: Activation.h
Lab-6/Ques2/src/: Activation.cpp  Layer.cpp  NeuralNetwork.cpp  main.cpp
